[package]
name = "overpass-cli"
version = "0.1.0"
description = "Query OpenStreetMap data using the Overpass API"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/overpass-cli"
repository = "https://github.com/jake-low/overpass-cli"
license = "ISC"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "cargo"] }
jsonxf = "1.1.1"
ureq = "2.10.1"

[[bin]]
name = "overpass"
path = "src/main.rs"
